Update PATH to support TeX Live for both ppc64le and x86_64

--- a/jupyter/minimal/ubi9-python-3.12/Dockerfile.cpu
+++ b/jupyter/minimal/ubi9-python-3.12/Dockerfile.cpu
@@ -63,7 +63,7 @@ USER 0
 RUN ./utils/install_pdf_deps.sh
 ENV PATH="/usr/local/texlive/bin/linux:/usr/local/pandoc/bin:$PATH"
 ENV PATH="/usr/local/texlive/bin/x86_64-linux:/usr/local/pandoc/bin:$PATH"
-ENV PATH="/opt/texlive/2025/bin/powerpc64le-unknown-linux-gnu:$PATH"
+ENV PATH="/opt/texlive/2025/bin/powerpc64le-unknown-linux-gnu:/usr/local/pandoc/bin:$PATH"
 # Dependencies for PDF export end
 
 USER 1001
