--- a/runtimes/pytorch+llmcompressor/ubi9-python-3.12/Pipfile
+++ b/runtimes/pytorch+llmcompressor/ubi9-python-3.12/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [[source]]
-url = "https://download.pytorch.org/whl/cu124"
+url = "https://download.pytorch.org/whl/cu126"
 verify_ssl = true
 name = "pytorch"
 
@@ -15,8 +15,8 @@ vllm = "~=0.8.5"
 [packages]
 # PyTorch packages
 tensorboard = "~=2.19.0"
-torch = {version = "==2.6.0", index = "pytorch"}
-torchvision = {version = "==0.21.0", index = "pytorch"}
+torch = {version = "==2.6.0+cu126", index = "pytorch"}
+torchvision = {version = "==0.21.0+cu126", index = "pytorch"}
 
 # llmcompressor packages
 llmcompressor = "~=0.5.1"
@@ -56,7 +56,7 @@ ipython-genutils = "~=0.2.0"
 jinja2 = "~=3.1.6"
 jupyter-client = "~=8.6.3"
 jupyter-core = "~=5.7.2"
-MarkupSafe = "~=3.0.2"
+markupsafe = "~=3.0.2"
 minio = "~=7.2.15"
 nbclient = "~=0.10.2"
 nbconvert = "~=7.16.6"
@@ -67,11 +67,11 @@ prompt-toolkit = "~=3.0.50"
 requests = "~=2.32.3"
 tornado = "~=6.5.2"
 traitlets = "~=5.14.3"
-urllib3 = "~=2.3.0"
+urllib3 = "~=2.5.0"
 
 # Base packages
 setuptools = "~=78.1.1"
 wheel = "==0.45.1"
 
 [requires]
-python_version = "3.11"
+python_version = "3.12"
