--- a/jupyter/pytorch+llmcompressor/ubi9-python-3.12/Pipfile
+++ b/jupyter/pytorch+llmcompressor/ubi9-python-3.12/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [[source]]
-url = "https://download.pytorch.org/whl/cu126"
+url = "https://download.pytorch.org/whl/cu124"
 verify_ssl = true
 name = "pytorch"
 
@@ -15,8 +15,8 @@ vllm = "~=0.8.5"
 [packages]
 # PyTorch packages
 tensorboard = "~=2.19.0"
-torch = {version = "==2.6.0+cu126", index = "pytorch"}
-torchvision = {version = "==0.21.0+cu126", index = "pytorch"}
+torch = {version = "==2.6.0", index = "pytorch"}
+torchvision = {version = "==0.21.0", index = "pytorch"}
 
 # llmcompressor packages
 llmcompressor = "~=0.5.1"
@@ -62,8 +62,8 @@ jupyter-server = "~=2.16.0"
 jupyter-server-proxy = "~=4.4.0"
 jupyter-server-terminals = "~=0.5.3"
 jupyterlab-git = "~=0.51.1"
-jupyterlab-lsp = "~=5.1.1"
-jupyterlab-widgets = "~=3.0.15"
+jupyterlab-lsp = "~=5.1.0"
+jupyterlab-widgets = "~=3.0.13"
 jupyter-resource-usage = "~=1.1.1"
 nbdime = "~=4.0.2"
 nbgitpuller = "~=1.2.2"
