--- a/manifests/overlays/additional/runtime-pytorch-llmcompressor-cuda-py312-ubi9-imagestream.yaml
+++ b/manifests/overlays/additional/runtime-pytorch-llmcompressor-cuda-py312-ubi9-imagestream.yaml
@@ -33,6 +33,6 @@ spec:
       from:
         kind: DockerImage
         name: odh-pipeline-runtime-pytorch-llmcompressor-cuda-py312-ubi9-n_PLACEHOLDER
-      name: "pytorch"
+      name: "pytorch-llmcompressor"
       referencePolicy:
         type: Source
