NO-JIRA: comment out `pytorch-llmcompressor` entries in kustomization.yaml because we're not ready to release it yet

--- a/manifests/overlays/additional/kustomization.yaml
+++ b/manifests/overlays/additional/kustomization.yaml
@@ -13,13 +13,13 @@ resources:
   - jupyter-pytorch-rocm-py312-ubi9-imagestream.yaml
   - jupyter-tensorflow-cuda-py312-ubi9-imagestream.yaml
   - jupyter-trustyai-cpu-py312-ubi9-imagestream.yaml
-  - jupyter-pytorch-llmcompressor-cuda-py312-ubi9-imagestream.yaml
+  # - jupyter-pytorch-llmcompressor-cuda-py312-ubi9-imagestream.yaml
   - runtime-datascience-cpu-py312-ubi9-imagestream.yaml
   - runtime-minimal-cpu-py312-ubi9-imagestream.yaml
   - runtime-pytorch-cuda-py312-ubi9-imagestream.yaml
   - runtime-pytorch-rocm-py312-ubi9-imagestream.yaml
   - runtime-tensorflow-cuda-py312-ubi9-imagestream.yaml
-  - runtime-pytorch-llmcompressor-cuda-py312-ubi9-imagestream.yaml
+  # - runtime-pytorch-llmcompressor-cuda-py312-ubi9-imagestream.yaml
 
 labels:
   - includeSelectors: true
