NO-JIRA: add ROCm TensorFlow wheel file to Pipfile directly

--- a/jupyter/rocm/tensorflow/ubi9-python-3.12/Pipfile
+++ b/jupyter/rocm/tensorflow/ubi9-python-3.12/Pipfile
@@ -10,7 +10,8 @@ tf2onnx = "~= 1.16.1"
 
 [packages]
 # ROCm TensorFlow packages
-tensorflow_rocm = "~=2.18.1"
+# https://rocm.docs.amd.com/projects/install-on-linux/en/latest/install/3rd-party/tensorflow-install.html#using-a-wheels-package
+tensorflow-rocm = {file = "https://repo.radeon.com/rocm/manylinux/rocm-rel-6.4/tensorflow_rocm-2.18.1-cp312-cp312-manylinux_2_28_x86_64.whl"}
 tensorboard = "~=2.18.0"
 
 # Datascience and useful extensions
