NO-JIRA: remove ROCm OpenCL SDK and configure ROCm shared libraries according to Documentation in TensorFlow Dockerfile
```
Error:
 Problem: package rocm-opencl-sdk-6.4.3.60403-128.el9.x86_64 from ROCm requires rocm-opencl-devel = 2.0.0.60403-128.el9, but none of the providers can be installed
  - package rocm-opencl-devel-2.0.0.60403-128.el9.x86_64 from ROCm requires rocm-opencl, but none of the providers can be installed
  - conflicting requests
  - nothing provides opencl-filesystem needed by rocm-opencl-5.4.4-1.el9.x86_64 from epel
  - nothing provides ocl-icd(x86-64) needed by rocm-opencl-5.4.4-1.el9.x86_64 from epel
  - nothing provides ocl-icd needed by rocm-opencl-2.0.0.60403-128.el9.x86_64 from ROCm
```

--- a/jupyter/rocm/tensorflow/ubi9-python-3.12/Dockerfile.rocm
+++ b/jupyter/rocm/tensorflow/ubi9-python-3.12/Dockerfile.rocm
@@ -73,8 +73,15 @@ RUN echo "[ROCm]" > /etc/yum.repos.d/rocm.repo && \
     echo "gpgcheck=0" >> /etc/yum.repos.d/amdgpu.repo && \
     dnf install -y 'https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm' && \
     dnf clean all && dnf makecache && \
-    dnf install -y rocm-developer-tools rocm-ml-sdk rocm-opencl-sdk rocm-openmp-sdk rocm-utils && \
+    dnf install -y rocm-developer-tools rocm-ml-sdk rocm-openmp-sdk rocm-utils && \
     dnf clean all && rm -rf /var/cache/dnf
+
+# https://rocm.docs.amd.com/projects/install-on-linux/en/latest/install/post-install.html#configure-rocm-shared-objects
+RUN tee --append /etc/ld.so.conf.d/rocm.conf <<EOF
+  /opt/rocm/lib
+  /opt/rocm/lib64
+EOF
+RUN ldconfig
 
 # Restore notebook user workspace
 USER 1001
