--- a/.tekton/odh-pipeline-runtime-minimal-cpu-py312-pull-request.yaml
+++ b/.tekton/odh-pipeline-runtime-minimal-cpu-py312-pull-request.yaml
@@ -44,6 +44,7 @@ spec:
     - linux/x86_64
     - linux/arm64
     - linux/ppc64le
+    - linux/s390x
   - name: image-expires-after
     value: 5d
   pipelineRef:
