updating runtime-minimal konflux images for ppc64le
Signed-off-by: AaruniAggarwal <aaruniagg@gmail.com>

--- a/runtimes/minimal/ubi9-python-3.11/Dockerfile.konflux.cpu
+++ b/runtimes/minimal/ubi9-python-3.11/Dockerfile.konflux.cpu
@@ -17,7 +17,7 @@ RUN dnf -y upgrade --refresh --best --nodocs --noplugins --setopt=install_weak_d
 RUN ARCH=$(uname -m) && \
     echo "Detected architecture: $ARCH" && \
     PACKAGES="mesa-libGL skopeo" && \
-    if [ "$ARCH" = "s390x" ]; then \
+    if [ "$ARCH" = "s390x" ] || [ "$ARCH" = "ppc64le" ]; then \
         PACKAGES="$PACKAGES gcc g++ make openssl-devel autoconf automake libtool cmake"; \
     fi && \
     dnf install -y $PACKAGES && \
