--- a/jupyter/minimal/ubi9-python-3.11/Dockerfile.konflux.cpu
+++ b/jupyter/minimal/ubi9-python-3.11/Dockerfile.konflux.cpu
@@ -64,7 +64,9 @@ LABEL name="odh-notebook-jupyter-minimal-ubi9-python-3.11" \
     authoritative-source-url="https://github.com/opendatahub-io/notebooks" \
     io.openshift.build.commit.ref="main" \
     io.openshift.build.source-location="https://github.com/opendatahub-io/notebooks/tree/main/jupyter/minimal/ubi9-python-3.11" \
-    io.openshift.build.image="quay.io/opendatahub/workbench-images:jupyter-minimal-ubi9-python-3.11"
+    io.openshift.build.image="quay.io/opendatahub/workbench-images:jupyter-minimal-ubi9-python-3.11" \
+    com.redhat.component="odh-workbench-jupyter-minimal-cpu-py311-rhel9" \
+    com.redhat.license_terms="https://www.redhat.com/licenses/Red_Hat_Standard_EULA_20191108.pdf"
 
 WORKDIR /opt/app-root/bin
 
