--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - uses: actions/checkout@v5
 
+      - run: echo "UV_PROJECT=${PWD}/tests" >> "${GITHUB_ENV}"
+
       # https://github.com/astral-sh/setup-uv
       - name: Install the latest version of uv
         uses: astral-sh/setup-uv@v5
@@ -25,8 +27,8 @@ jobs:
           version: "latest"
           python-version: "3.12"
           enable-cache: true
-          cache-dependency-glob: "uv.lock"
-          pyproject-file: "pyproject.toml"
+          cache-dependency-glob: "tests/uv.lock"
+          pyproject-file: "tests/pyproject.toml"
 
       - name: Run the release notes script
         run: |
