--- a/runtimes/tensorflow/ubi9-python-3.11/Pipfile
+++ b/runtimes/tensorflow/ubi9-python-3.11/Pipfile
@@ -10,7 +10,7 @@ tf2onnx = "~=1.16.1"
 
 [packages]
 # TensorFlow packages
-tensorflow = {version = "==2.20.0rc0", extras = ["and-cuda"]}
+tensorflow = {version = "==2.20.0", extras = ["and-cuda"]}
 tensorboard = "~=2.20.0"
 
 # Datascience and useful extensions
