--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -398,7 +398,7 @@ jobs:
 
           sudo apt-get update
           # [ERROR FileExisting-conntrack]: conntrack not found in system path
-          sudo apt-get install -y cri-o kubelet kubeadm kubectl conntrack
+          sudo apt-get install -y cri-o cri-tools kubelet kubeadm kubectl conntrack
 
           # make use of /etc/cni/net.d/11-crio-ipv4-bridge.conflist so we don't
           # need a pod network and just use the default bridge
