opendatahub-io/notebooks#2178: fix(ci): add missing cri-tools dependency in build-notebooks workflow (#2179)
(cherry picked from commit 62fb1f7958276ed0e2ffd68a96ae155ab5fc17a3)

--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -299,7 +299,7 @@ jobs:
             sudo tee /etc/apt/sources.list.d/cri-o.list
 
           sudo apt-get update
-          sudo apt-get install -y cri-o kubelet kubeadm kubectl
+          sudo apt-get install -y cri-o cri-tools kubelet kubeadm kubectl
 
           # make use of /etc/cni/net.d/11-crio-ipv4-bridge.conflist so we don't
           # need a pod network and just use the default bridge
