--- a/rstudio/rhel9-python-3.11/Dockerfile.cuda
+++ b/rstudio/rhel9-python-3.11/Dockerfile.cuda
@@ -83,10 +83,10 @@ RUN NVIDIA_GPGKEY_SUM=d0664fbbdb8c32356d45de36c5984617217b2d0bef41b93ccecd326ba3
 ENV CUDA_VERSION=12.4.1
 
 # For libraries in the cuda-compat-* package: https://docs.nvidia.com/cuda/eula/index.html#attachment-a
-RUN yum upgrade -y && yum install -y \
+RUN dnf upgrade -y && dnf install -y \
     cuda-cudart-12-4-${NV_CUDA_CUDART_VERSION} \
     cuda-compat-12-4 \
-    && yum clean all \
+    && dnf clean all \
     && rm -rf /var/cache/yum/*
 
 # nvidia-docker 1.0
@@ -115,13 +115,13 @@ ENV NV_LIBNCCL_VERSION=2.21.5
 ENV NCCL_VERSION=2.21.5
 ENV NV_LIBNCCL_PACKAGE=${NV_LIBNCCL_PACKAGE_NAME}-${NV_LIBNCCL_PACKAGE_VERSION}+cuda12.4
 
-RUN yum install -y \
+RUN dnf install -y \
     cuda-libraries-12-4-${NV_CUDA_LIB_VERSION} \
     cuda-nvtx-12-4-${NV_NVTX_VERSION} \
     ${NV_LIBNPP_PACKAGE} \
     libcublas-12-4-${NV_LIBCUBLAS_VERSION} \
     ${NV_LIBNCCL_PACKAGE} \
-    && yum clean all \
+    && dnf clean all \
     && rm -rf /var/cache/yum/*
 
 # Set this flag so that libraries can find the location of CUDA
@@ -129,10 +129,10 @@ ENV XLA_FLAGS=--xla_gpu_cuda_data_dir=/usr/local/cuda
 
 # Install devel tools
 
-RUN yum install -y \
+RUN dnf install -y \
     make \
     findutils \
-    && yum clean all \
+    && dnf clean all \
     && rm -rf /var/cache/yum/*
 
 # Install CUDA cudnn9 from:
@@ -142,14 +142,14 @@ ENV NV_CUDNN_PACKAGE=libcudnn9-cuda-12-${NV_CUDNN_VERSION}
 
 LABEL com.nvidia.cudnn.version="${NV_CUDNN_VERSION}"
 
-RUN yum install -y \
+RUN dnf install -y \
     ${NV_CUDNN_PACKAGE} \
-    && yum clean all \
+    && dnf clean all \
     && rm -rf /var/cache/yum/*
 
 # Install CUDA toolkit 12.4
-RUN yum -y install cuda-toolkit-12-4 && \
-    yum -y clean all --enablerepo="*"
+RUN dnf -y install cuda-toolkit-12-4 && \
+    dnf -y clean all --enablerepo="*"
 
 # Unregister the system
 RUN if [ -d "${SECRET_DIR}" ]; then \
@@ -204,15 +204,15 @@ RUN if [ -d "${SECRET_DIR}" ]; then \
 ENV R_VERSION=4.4.3
 
 # Install R
-RUN yum install -y yum-utils && \
+RUN dnf install -y yum-utils && \
     subscription-manager repos --enable codeready-builder-for-rhel-9-x86_64-rpms && \
-    yum install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm && \
+    dnf install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm && \
     INSTALL_PKGS="R-core R-core-devel R-java R-Rcpp R-highlight \
     R-littler R-littler-examples openssl-libs compat-openssl11" && \
-    yum install -y --setopt=tsflags=nodocs $INSTALL_PKGS && \
+    dnf install -y --setopt=tsflags=nodocs $INSTALL_PKGS && \
     echo 'options(repos = c(CRAN = "https://cran.rstudio.com/"), download.file.method = "libcurl")' >> /usr/lib64/R/etc/Rprofile.site && \
     (umask 002;touch /usr/lib64/R/etc/Renviron.site) && \
-    yum -y clean all --enablerepo='*'
+    dnf -y clean all --enablerepo='*'
 
 # set R library to default (used in install.r from littler)
 ENV LIBLOC=/usr/lib64/R/library
@@ -228,9 +228,9 @@ WORKDIR /tmp/
 # Install RStudio
 ARG RSTUDIO_RPM=rstudio-server-rhel-2024.12.1-563-x86_64.rpm
 RUN wget --progress=dot:giga https://download2.rstudio.org/server/rhel9/x86_64/${RSTUDIO_RPM} && \
-    yum install -y ${RSTUDIO_RPM} && \
+    dnf install -y ${RSTUDIO_RPM} && \
     rm ${RSTUDIO_RPM} && \
-    yum -y clean all  --enablerepo='*' &&\
+    dnf -y clean all  --enablerepo='*' &&\
     # Specific RStudio config and fixes \
     chmod 1777 /var/run/rstudio-server && \
     mkdir -p /usr/share/doc/R && \
@@ -257,12 +257,12 @@ ENV NGINX_VERSION=1.24 \
     NGINX_PERL_MODULE_PATH=${APP_ROOT}/etc/perl
 
 # Modules does not exist
-RUN yum -y module enable nginx:$NGINX_VERSION && \
+RUN dnf -y module enable nginx:$NGINX_VERSION && \
     INSTALL_PKGS="nss_wrapper bind-utils gettext hostname nginx nginx-mod-stream nginx-mod-http-perl fcgiwrap initscripts chkconfig supervisor" && \
-    yum install -y --setopt=tsflags=nodocs $INSTALL_PKGS && \
+    dnf install -y --setopt=tsflags=nodocs $INSTALL_PKGS && \
     rpm -V $INSTALL_PKGS && \
     nginx -v 2>&1 | grep -qe "nginx/$NGINX_VERSION\." && echo "Found VERSION $NGINX_VERSION" && \
-    yum -y clean all --enablerepo='*'
+    dnf -y clean all --enablerepo='*'
 
 COPY --chown=1001:0 ${RSTUDIO_SOURCE_CODE}/supervisord/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
